# specforge

./: CLAUDE.md  COMPARATIVE_REPORT.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: forgemyspec-default.md  specforge-default.md
.claude/skills/: forgemyspec  forgemyspec-amend  forgemyspec-implement  specforge  specforge-implement
.claude/skills/specforge-implement/: SKILL.md
.claude/skills/specforge/references/: implement-from-spec-workflow.md  mcp-and-context.md  spec-schema.md
.github/workflows/: spec-lint.yml  tests.yml
examples/mini-os/: CLAUDE.md  Makefile  acceptance-checklist.md  linker.ld  spec.yaml
examples/mini-os/.claude/commands/: implement-from-spec.md
examples/mini-os/boot/: boot.asm
examples/mini-os/evals/: scope_drift_cases.yaml
examples/mini-os/kernel/: entry.asm  kernel.c
examples/sample-bundle/: CLAUDE.md  acceptance-checklist.md  spec.yaml
examples/sample-bundle/.claude/commands/: implement-from-spec.md
examples/sample-bundle/evals/: scope_drift_cases.yaml
experiments/: COMPARATIVE_REPORT.md  chart.py
experiments/mini-os/: spec.yaml
experiments/spec_versus_nonspec/with-framework/01-task-manager/: spec.yaml
forgemyspec-bundle/: CLAUDE.md  acceptance-checklist.md  spec.yaml
forgemyspec-bundle/evals/: scope_drift_cases.yaml
plugins/forgemyspec/agents/: forgemyspec-default.md
plugins/specforge/.claude-plugin/: plugin.json
src/forgemyspec/: __init__.py  branding.py  claude_skill.py  cli.py  config.py  generator.py  linting.py  llm.py  models.py  nlp_policy.py  scope_eval.py  templates.py
src/forgemyspec.egg-info/: PKG-INFO
src/opsspec/: branding.py  cli.py
tests/: support.py  test_claude_skill.py  test_config_and_policy.py  test_generator.py  test_linting.py  test_scope_eval.py
(+30 files in other folders)
